Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.


2007-sept-22 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ all
    * small change in hotkeys handling
		(Ki_HotkeyInfo: new member m_IdMenuEvent to call an existing event handler from a hotkey list)

+ eeschema:
	* added drag component in pop up menu and hotkeys
	* plot svg format: incorrect arc draw fixed


2007-Sep-22 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    GENERAL_COLLECTOR::Collect() was skipping thru hole pads even though they
    were visible.
    Highlight tool now sends message to eeschema when a pad is selected.
    

2007-Sep-20 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ eeschema
  * beautify, add debug Show() functions, changed ReturnFieldName()
    to return "const wxString&" for speed, added GetFieldValue().
  * tracking down questionable behavior (a bug?) in erc regarding pwr_flag, still looking


2007-sept-20 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ all
    * hotkeys handling finished
+ pcbnew
    * bug fix: a subtle bug in place via : partial drc only was made.


2007-Sep-14 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * controle.cpp, added Function AllAreModulesAndReturnSmallestIfSo() which is
    called from PcbGeneralLocateAndDisplay()
  * onrightclick.cpp changed to calls to BOARD_ITEM::MenuText(), and switched
    to member functions for createPopupMenus() so we can get all the state
    information we need for the proper menus.